--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="add">Add</string>
     <string name="default_group_id">1234</string>
     <string name="your_group_id_label">Your group ID:</string>
+    <string name="create_a_room">Create a room</string>
+    <string name="join_a_room">Join a room</string>
 </resources>
