--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="instructions">Instructions: Add new options with ADD. Click and drag each option to indicate your order of preference. Then, select VOTE. </string>
     <string name="group_name">Group Name</string>
     <string name="enter_a_name_for_your_group">Enter a name for your group</string>
+    <string-array name="SpinnerChoices"><item>Weighted Ranking</item><item>Exhaustive Ballot</item></string-array>
 </resources>
