--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="your_group_id_label">Your group ID:</string>
     <string name="create_a_room">Create room</string>
     <string name="join_a_room">Join room</string>
-    <string name="instructions">Instructions: Add new options with ADD. *Hold* and drag each option to indicate your order of preference. Then, select VOTE. </string>
+    <string name="instructions">Instructions: Add new options with ADD. *Hold* and drag each option
+        to indicate your order of preference, with your favorites at the top. Then, select VOTE. </string>
     <string name="group_name">Group Name</string>
     <string name="enter_a_name_for_your_group">Enter a name for your group</string>
     <string-array name="SpinnerChoices"><item>Average Ranking</item><item>Instant Run-off</item></string-array>
